0121 스프링부트 공부

--- a/blog/src/main/resources/application.yml
+++ b/blog/src/main/resources/application.yml
@@ -1,10 +1,43 @@
+server:
+  port: 8000
+  servlet:
+    context-path: /blog
+    encoding:
+      charset: UTF-8
+      enabled: true
+      force: true
+
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/blog?serverTimezone=Asia/Seoul
     username: cos
     password: cos1234
+  
+  # 강의자료에서 퍼온거
   jpa:
     database: mysql
     database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
+    open-in-view: true
+    hibernate:
+      ddl-auto: create
+      naming:
+        physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+      use-new-id-generator-mappings: false
+    show-sql: true
+    properties:
+      hibernate.format_sql: true
+      
+  # 기존 jpa 설정
+  #jpa:
+  #  database: mysql
+  #  database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
 
+  mvc:
+    view:
+      prefix: /WEB-INF/views/
+      suffix: .jsp
+
+  jackson:
+    serialization:
+      fail-on-empty-beans: false
