--- a/blog/src/main/resources/application.yml
+++ b/blog/src/main/resources/application.yml
@@ -24,9 +24,9 @@ spring:
       naming:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
       use-new-id-generator-mappings: false
-    show-sql: true
+    show-sql: false
     properties:
-      hibernate.format_sql: true
+      hibernate.format_sql: false
       
   # 기존 jpa 설정
   #jpa:
