--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,2 +1,18 @@
 server:
   port: 8000
+
+spring:
+#  datasource:
+#    driver-class-name: com.mysql.cj.jdbc.Driver
+#    url: jdbc:mysql://localhost:3306/newfriends?serverTimezone=Asia/Seoul
+#    username: newfriends
+#    password: 1234
+
+  thymeleaf:
+    prefix: classpath:templates/
+    suffix: .html
+    cache: false
+
+  jackson:
+    serialization:
+      fail-on-empty-beans: false
