--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,14 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
     implementation 'com.theokanning.openai-gpt3-java:api:0.10.0' //GPT
-    implementation 'com.theokanning.openai-gpt3-java:service:0.10.0' //GPT
+//    implementation 'com.theokanning.openai-gpt3-java:service:0.10.0' //GPT
+    compileOnly 'io.reactivex.rxjava2:rxjava:2.2.4' //GPT
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-jackson:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.okhttp3:okhttp:3.12.2'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.9.0'
+
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'com.mysql:mysql-connector-j'
