--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'io.springfox:springfox-swagger-ui:2.9.2' //Swagger
     compileOnly 'org.projectlombok:lombok'
     
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
