--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,8 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'io.springfox:springfox-swagger-ui:2.9.2' //Swagger
+    implementation 'io.springfox:springfox-swagger2:2.9.2' //Swagger
+    implementation 'io.springfox:springfox-swagger-ui:2.9.2' //Swagger UI
     compileOnly 'org.projectlombok:lombok'
     
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
