--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
     implementation 'com.theokanning.openai-gpt3-java:api:0.11.1' //GPT
+    implementation 'io.springfox:springfox-swagger2:2.9.2' // Swagger2
+    implementation 'io.springfox:springfox-swagger-ui:2.9.2' // Swagger UI
+
 //    implementation 'com.theokanning.openai-gpt3-java:service:0.11.1' //GPT
     compileOnly 'io.reactivex.rxjava2:rxjava:2.2.4' //GPT
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
